# elucidator

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
elucidator/: Cargo.toml
elucidator-db/: Cargo.toml
elucidator-db/src/: database.rs  error.rs  lib.rs
elucidator-db/src/backends/: mod.rs  rtree.rs  sqlite.rs
elucidator-examples/c/monte_carlo/: Makefile  monte_carlo.c
elucidator-examples/python/: MonteCarloDemo.ipynb  env.yaml
elucidator-examples/rust/monte_carlo/: Cargo.toml
elucidator-examples/rust/monte_carlo/src/: main.rs
elucidator/src/: designation.rs  error.rs  helper.rs  lib.rs  member.rs  parsing.rs  representable.rs  specification.rs  test_utils.rs  token.rs  util.rs  validating.rs  value.rs
elucidator/src/member/: dtype.rs  member_specification.rs  sizing.rs  type_specification.rs
elucidator_macros/: Cargo.toml
elucidator_macros/my_crate_macros/: Cargo.toml
elucidator_macros/my_crate_macros/src/: lib.rs
elucidator_macros/src/: lib.rs
elucidatorc/: .gitignore  Cargo.toml  Makefile  cbindgen.toml  elucidator.h  elucidator_manual.h  test_elucidator.c
elucidatorc/src/: lib.rs
elucitools/: Cargo.toml  stupid.sh
elucitools/src/: main.rs  sadbench.rs  validate.rs
pyelucidator/: .gitignore  Cargo.toml  pyproject.toml
pyelucidator/src/: lib.rs
scratch-rusqlite/: Cargo.toml
scratch-rusqlite/src/: main.rs
