[package]
name = "elucidator-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elucidator = { version = "0.1.0", path = "../elucidator" }
pretty_assertions = "1.4.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["backup"] }
