[package]
name = "elucidator-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elucidator = { version = "0.1.0", path = "../elucidator" }
pretty_assertions = "1.4.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["backup"] }
rstar = "0.12.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
